--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
-    "antd": "^5.4.7",
+    "antd": "^5.5.0",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -25,6 +25,7 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@types/node": "^20.2.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
