--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "baseUrl": "src",
-    "paths": {
-      "@/*":["src/*"]
-    },
+    "baseUrl": "./",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
